# lamp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.bat  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: binaries.json  fetch-binaries.mjs
src/: App.tsx  main.tsx  types.ts  useService.ts
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  installer-template.nsi  tauri.conf.json  tauri.windows.conf.json
src-tauri/.updater-keys/: lamp-bench.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  downloads.rs  images.rs  lib.rs  main.rs
src-tauri/src/cloud/: mod.rs
src-tauri/src/cms/: mod.rs  wordpress.rs
src-tauri/src/config_gen/: mod.rs
src-tauri/src/deploy/: mod.rs
src-tauri/src/dyndns/: mod.rs
src-tauri/src/hosts/: mod.rs
src-tauri/src/ioncube/: mod.rs
src-tauri/src/php/: mod.rs
src-tauri/src/services/: apache.rs  mailhog.rs  mod.rs  mysql.rs  nginx.rs  redis.rs
src-tauri/src/snapshots/: mod.rs
src-tauri/src/ssl/: mod.rs  trust.rs
src/components/: MobileQRModal.tsx  SetupWizard.tsx  Sidebar.tsx  Toast.tsx  Toggle.tsx  TopBar.tsx  UpdateBanner.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  es.json  fr.json
src/sections/: ConfigSection.tsx  EditorSection.tsx  HomeSection.tsx  HostsSection.tsx  LogsSection.tsx  SettingsSection.tsx  ToolsSection.tsx  VersionsSection.tsx
