[package]
name = "lamp-bench"
version = "0.1.0"
description = "Local web development environment — Apache, Nginx, MySQL, multi-PHP behind a native GUI."
authors = ["Lamp Bench contributors"]
edition = "2021"

[lib]
name = "lamp_bench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
time = { version = "0.3", features = ["std"] }
