[package]
name = "lamp-bench"
version = "0.1.0"
description = "Local web development environment — Apache, Nginx, MySQL, multi-PHP behind a native GUI."
authors = ["Lamp Bench contributors"]
edition = "2021"

[lib]
name = "lamp_bench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
time = { version = "0.3", features = ["std"] }
rand = "0.8"
# Runtime on-demand binary downloads (Redis, Nginx, alt PHP, CMSes, …).
# ureq's blocking HTTP + rustls TLS so we don't need system OpenSSL. zip
# handles the extraction. sha2 verifies the manifest's pinned SHA256.
ureq = { version = "2.10", default-features = false, features = ["tls"] }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Snapshots — tar.zst archive of a host's docroot
tar = "0.4"
zstd = { version = "0.13", default-features = false }
# Image optimizer (Tools panel). `image` handles JPG re-encoding at a given
# quality; `oxipng` does in-place lossless PNG optimisation. Both are pure
# Rust so no native libs to ship.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
oxipng = { version = "9", default-features = false }
# Deploy → FTP upload. Sync API, pure Rust, no native libssl dep. SFTP
# lives behind a separate russh-sftp wiring (Phase 7.x) and isn't here yet.
suppaftp = "6"
